--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ajv": "^6.0.0",
     "axios": "^0.18.0",
+    "hls.js": "^0.11.0",
     "vue": "^2.5.2",
+    "vue-aplayer": "^1.6.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
