--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.5.2",
     "vue-aplayer": "^1.6.1",
     "vue-router": "^3.0.1",
+    "vue-swipe": "^2.4.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
